--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "illuminate/validation": "4.1.*",
         "silex/silex": "~1.2",
         "twig/twig": ">=1.8,<2.0-dev",
-        "symfony/twig-bridge": "~2.3",
+        "symfony/twig-bridge": "~2.3"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
